--- a/src/app/certifications/certification/certification.html
+++ b/src/app/certifications/certification/certification.html
@@ -1,7 +1,7 @@
 <div class="certification">
 
     <div class="certification__header">
-        <img [src]="'/assets/icons/'+learningPlatform()+'.svg'" alt="learning platform icon">
+        <img [src]="'./assets/icons/'+learningPlatform()+'.svg'" alt="learning platform icon">
         <h3>{{title()}}</h3>      
         <span>Issued {{issued()}}</span>  
         <span>Credential ID: <a target="_blank" [href]="'https://www.udemy.com/certificate/'+credentialId()+'/'"> {{credentialId()}} </a></span>
