--- a/src/app/personal-projects/personal-projects.html
+++ b/src/app/personal-projects/personal-projects.html
@@ -12,28 +12,28 @@
             <h4>Tech used on this project</h4>
 
             <div class="project__group__img angular">
-                <img src="/assets/icons/angular.svg" alt="angular logo">
+                <img src="./assets/icons/angular.svg" alt="angular logo">
             </div>
 
             <div class="project__group__img blue-shadow">
-                <img src="/assets/icons/ts.svg" alt="ts logo">
+                <img src="./assets/icons/ts.svg" alt="ts logo">
             </div>
 
 
             <div class="project__group__img blue-shadow">
-                <img src="/assets/icons/css3.svg" alt="css logo">
+                <img src="./assets/icons/css3.svg" alt="css logo">
             </div>
             
             <div class="project__group__img html5">
-                <img src="/assets/icons/html5.svg" alt="html logo">
+                <img src="./assets/icons/html5.svg" alt="html logo">
             </div>
 
             <div class="project__group__img blue-shadow">
-                <img src="/assets/icons/vscode.svg" alt="html logo">
+                <img src="./assets/icons/vscode.svg" alt="html logo">
             </div>
 
             <div class="project__group__img github">
-                <img src="/assets/icons/github.svg" alt="html logo">
+                <img src="./assets/icons/github.svg" alt="html logo">
             </div>
             
         </div>
