--- a/src/app/presentation/notepad/notepad.html
+++ b/src/app/presentation/notepad/notepad.html
@@ -10,7 +10,7 @@
 >
 
     <div class="notepad__menu">
-        <img alt="notepad icon" src="/assets/icons/notepad.png" />
+        <img alt="notepad icon" src="./assets/icons/notepad.png" />
         <p class="notepad__menu__file-title">{{filename()}} - Notepad</p>
         <div class="notepad__menu__window-options">
             <i class="codicon codicon-chrome-minimize"> </i>
