--- a/src/app/presentation/vs-code/file-visualizer/file-visualizer.html
+++ b/src/app/presentation/vs-code/file-visualizer/file-visualizer.html
@@ -3,9 +3,9 @@
     <div class="vs-code-ui__file-visualizer__files-open">
         <div class="vs-code-ui__file-visualizer__files-open__file">
             <hr class="ui-separator blue" />
-            <img alt="file type icon" src="/assets/vs-icons/code-solid-full.svg">
+            <img alt="file type icon" src="./assets/vs-icons/code-solid-full.svg">
             <span class="vs-code-ui__file-visualizer__files-open__file__title">presentation.html</span>
-            <img class="vs-code-ui__file-visualizer__files-open__file__close" src="/assets/vs-icons/close.svg"
+            <img class="vs-code-ui__file-visualizer__files-open__file__close" src="./assets/vs-icons/close.svg"
                 alt="Close window" />
             <hr class="ui-separator vertical">
         </div>
