--- a/src/app/presentation/vs-code/left-menu-project-explorer/left-menu-project-explorer.html
+++ b/src/app/presentation/vs-code/left-menu-project-explorer/left-menu-project-explorer.html
@@ -20,7 +20,7 @@
             <li><span class="brackets">&#123; &#125; </span>package.json</li>
             <li><i class="codicon codicon-info info"></i> README.md</li>
             <li><span class="brackets">&#123; &#125; </span>tsconfig.app.json</li>
-            <li><img src="/assets/vs-icons/ts.svg" alt="ts icon" class="ts" /> tsconfig.json</li>
+            <li><img src="./assets/vs-icons/ts.svg" alt="ts icon" class="ts" /> tsconfig.json</li>
             <li><span class="brackets">&#123; &#125; </span>tsconfig.spec.json</li>
         </ul>
     </ul>
