--- a/src/app/presentation/vs-code/terminal/terminal.html
+++ b/src/app/presentation/vs-code/terminal/terminal.html
@@ -16,7 +16,7 @@
             <li class="vs-code-ui__console__options__option"><i class="codicon codicon-ellipsis"></i></li>
             <li class="vs-code-ui__console__options__option">|</li>
             <li class="vs-code-ui__console__options__option"><img alt="fullscreen icon"
-                    src="/assets/vs-icons/fullscreen.svg"></li>
+                    src="./assets/vs-icons/fullscreen.svg"></li>
             <li class="vs-code-ui__console__options__option"><i class="codicon codicon-chrome-close"></i></li>
         </ul>
 
