--- a/src/app/tech-stack/tech-stack.html
+++ b/src/app/tech-stack/tech-stack.html
@@ -4,82 +4,82 @@
 
     <app-tech-stack-group title="📝 IDEs">
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/vscode.svg" alt="vscode icon">
+            <img src="./assets/icons/vscode.svg" alt="vscode icon">
         </div>
         <div class="tech-stack__group__img csharp">
-            <img src="/assets/icons/vs.svg" alt="vs icon">
+            <img src="./assets/icons/vs.svg" alt="vs icon">
         </div>
         <div class="tech-stack__group__img eclipse">
-            <img src="/assets/icons/eclipse.svg" alt="eclipse icon">
+            <img src="./assets/icons/eclipse.svg" alt="eclipse icon">
         </div>
         <div class="tech-stack__group__img pycharm">
-            <img src="/assets/icons/pycharm.svg" alt="pycharm icon">
+            <img src="./assets/icons/pycharm.svg" alt="pycharm icon">
         </div>
     </app-tech-stack-group>
 
     <app-tech-stack-group title="🛢️ Databases">
         <div class="tech-stack__group__img mongodb">
-            <img src="/assets/icons/mongodb.svg" alt="mongodb icon">
+            <img src="./assets/icons/mongodb.svg" alt="mongodb icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/cosmosdb.svg" alt="cosmosdb icon">
+            <img src="./assets/icons/cosmosdb.svg" alt="cosmosdb icon">
         </div>
         <div class="tech-stack__group__img red-shadow">
-            <img src="/assets/icons/sql-server.svg" alt="sqlserver icon">
+            <img src="./assets/icons/sql-server.svg" alt="sqlserver icon">
         </div>
         <div class="tech-stack__group__img red-shadow">
-            <img src="/assets/icons/oracle.svg" alt="oracle icon">
+            <img src="./assets/icons/oracle.svg" alt="oracle icon">
         </div>
     </app-tech-stack-group>
 
     <app-tech-stack-group title="🔀 Version Control">
         <div class="tech-stack__group__img html5">
-            <img src="/assets/icons/git.svg" alt="git icon">
+            <img src="./assets/icons/git.svg" alt="git icon">
         </div>
         <div class="tech-stack__group__img github">
-            <img src="/assets/icons/github.svg" alt="github icon">
+            <img src="./assets/icons/github.svg" alt="github icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/bitbucket.svg" alt="bitbucket icon">
+            <img src="./assets/icons/bitbucket.svg" alt="bitbucket icon">
         </div>
     </app-tech-stack-group>
 
     <app-tech-stack-group title="🔨 BackEnd">
         <div class="tech-stack__group__img csharp">
-            <img src="/assets/icons/csharp.svg" alt="c sharp icon">
+            <img src="./assets/icons/csharp.svg" alt="c sharp icon">
         </div>
         <div class="tech-stack__group__img python">
-            <img src="/assets/icons/python.svg" alt="Python icon">
+            <img src="./assets/icons/python.svg" alt="Python icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/dotnet.svg" alt=".NET icon">
+            <img src="./assets/icons/dotnet.svg" alt=".NET icon">
         </div>
         <div class="tech-stack__group__img java">
-            <img src="/assets/icons/java.svg" alt="Java icon">
+            <img src="./assets/icons/java.svg" alt="Java icon">
         </div>
     </app-tech-stack-group>
 
     <app-tech-stack-group title="🖌️ Frontend">
         <div class="tech-stack__group__img js">
-            <img src="/assets/icons/js.svg" alt="js icon">
+            <img src="./assets/icons/js.svg" alt="js icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/jquery.svg" alt="jquery icon">
+            <img src="./assets/icons/jquery.svg" alt="jquery icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/css3.svg" alt="css3 icon">
+            <img src="./assets/icons/css3.svg" alt="css3 icon">
         </div>
         <div class="tech-stack__group__img sass">
-            <img src="/assets/icons/sass.svg" alt="sass icon">
+            <img src="./assets/icons/sass.svg" alt="sass icon">
         </div>
         <div class="tech-stack__group__img blue-shadow">
-            <img src="/assets/icons/ts.svg" alt="ts icon">
+            <img src="./assets/icons/ts.svg" alt="ts icon">
         </div>
         <div class="tech-stack__group__img angular">
-            <img src="/assets/icons/angular.svg" alt="angular icon">
+            <img src="./assets/icons/angular.svg" alt="angular icon">
         </div>
         <div class="tech-stack__group__img html5">
-            <img src="/assets/icons/html5.svg" alt="html5 icon">
+            <img src="./assets/icons/html5.svg" alt="html5 icon">
         </div>
     </app-tech-stack-group>
 
