--- a/src/app/presentation/presentation.html
+++ b/src/app/presentation/presentation.html
@@ -2,7 +2,7 @@
 
     <div class="avatar_section__hamburger">
         <button class="avatar_section__hamburger__btn" (click)="onOpenHamburgerMenu()">
-            <img src="/assets/icons/hamburger-menu.svg" alt="Hamburger menu icon" />
+            <img src="./assets/icons/hamburger-menu.svg" alt="Hamburger menu icon" />
         </button>
     </div>
 
@@ -14,7 +14,7 @@
         <div class="avatar_section__wrapper">
 
             <div class="avatar_section__image">
-                <img alt="Profile avatar" src="/assets/profile.png">
+                <img alt="Profile avatar" src="./assets/profile.png">
             </div>
             <h1 class="avatar-section__title">Antonio Carrasco</h1>
             <p class="avatar-section__position">Full-Stack .NET Developer</p>
