--- a/src/app/presentation/social-networks/social-networks.html
+++ b/src/app/presentation/social-networks/social-networks.html
@@ -2,12 +2,12 @@
 
     <li class="social-networks__container__item">
         <a href="https://github.com/Onion-Ring" target="_blank">
-            <img alt="Github Icon" src="/assets/icons/github.svg">
+            <img alt="Github Icon" src="./assets/icons/github.svg">
         </a>
     </li>
     <li class="social-networks__container__item">
         <a href="https://es.linkedin.com/in/antonio-carrasco-garcía-479277356" target="_blank">
-            <img alt="LinkedIn Icon" src="/assets/icons/linkedin.svg">
+            <img alt="LinkedIn Icon" src="./assets/icons/linkedin.svg">
         </a>
     </li>
 </ul>
