--- a/src/app/presentation/vs-code/top-menu/top-menu.html
+++ b/src/app/presentation/vs-code/top-menu/top-menu.html
@@ -1,6 +1,6 @@
 <nav class="vs-code-ui__navbar">
     <ul class="vs-code-ui__navbar__menu">
-        <li><img src="/assets/vs-icons/vscode.svg" alt="vscode icon" /></li>
+        <li><img src="./assets/vs-icons/vscode.svg" alt="vscode icon" /></li>
         <li>File</li>
         <li>Edit</li>
         <li>Selection</li>
@@ -11,12 +11,12 @@
         <li>Help</li>
     </ul>
     <ul class="vs-code-ui__navbar__search">
-        <li class="vs-code-ui__navbar__search-arrows"><img src="/assets/vs-icons/arrow_left.svg" alt="arrow left" />
-            <img src="/assets/vs-icons/arrow_right.svg" alt="arrow right" /></li>
-        <li><img src="/assets/vs-icons/search.svg" class="vs-code-ui__navbar__search-search-icon"
+        <li class="vs-code-ui__navbar__search-arrows"><img src="./assets/vs-icons/arrow_left.svg" alt="arrow left" />
+            <img src="./assets/vs-icons/arrow_right.svg" alt="arrow right" /></li>
+        <li><img src="./assets/vs-icons/search.svg" class="vs-code-ui__navbar__search-search-icon"
                 alt="search icon" /><input  readonly class="vs-code-ui__navbar__search__search-input" placeholder="Portfolio" />
         </li>
-        <li><img src="/assets/vs-icons/desktop.svg" alt="vscode icon" /></li>
+        <li><img src="./assets/vs-icons/desktop.svg" alt="vscode icon" /></li>
     </ul>
     <ul class="vs-code-ui__navbar__layout">
         <li><i class="codicon codicon-layout"></i></li>
@@ -26,10 +26,10 @@
     </ul>
     <ul class="vs-code-ui__navbar__window-options">
         <li class="minimize"><img class="vs-code-ui__navbar__window-options-minimize"
-                src="/assets/vs-icons/minimize.svg" alt="minimize window" /></li>
+                src="./assets/vs-icons/minimize.svg" alt="minimize window" /></li>
         <li class="maximize"><img class="vs-code-ui__navbar__window-options-maximize"
-                src="/assets/vs-icons/maximize.svg" alt="maximize window" /></li>
-        <li class="close"><img class="vs-code-ui__navbar__window-options-close" src="/assets/vs-icons/close.svg"
+                src="./assets/vs-icons/maximize.svg" alt="maximize window" /></li>
+        <li class="close"><img class="vs-code-ui__navbar__window-options-close" src="./assets/vs-icons/close.svg"
                 alt="Close window" /></li>
     </ul>
 </nav>
