--- a/src/app/certifications/certification/certification.css
+++ b/src/app/certifications/certification/certification.css
@@ -54,3 +54,11 @@
     padding: 4px;
     list-style-type: none;
 }
+
+@media (max-width: 740px) {
+
+    .certification{
+        width: 90%;
+    }
+
+}
