--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,3 +6,11 @@
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 670px) {
+
+    div[app-animated-bg]{
+        display: none;
+    }
+
+}
