--- a/src/app/education-list/education/education.html
+++ b/src/app/education-list/education/education.html
@@ -19,4 +19,4 @@
     <img class="education-img" alt="Center img" src={{imagePath()}}  />
 </div>
 <h3 class="education-subtitle">Main Skills</h3>
-<ng-content select="p,ul, li, span"></ng-content>
+<ng-content select="p,div, span"></ng-content>
