--- a/src/app/presentation/hamburger-menu/hamburger-menu.css
+++ b/src/app/presentation/hamburger-menu/hamburger-menu.css
@@ -6,12 +6,12 @@
     left: 0;
     position: fixed;
     animation: backdrop-fade 0.8s ease forwards;
-    
+
 }
 
-a{
+a {
     text-decoration: none;
-    color: rgb(223, 223, 223) ;
+    color: rgb(223, 223, 223);
 }
 
 
@@ -21,12 +21,12 @@ a{
     width: 50%;
     left: 25%;
     top: 25%;
-    height: 50%;        
+    height: 50%;
 }
 
 .hamburger-menu__menu-options {
     padding: 8px;
-    width: 100%;    
+    width: 100%;
 }
 
 .hamburger-menu__menu-options__option {
@@ -35,7 +35,7 @@ a{
     padding: 8px;
     font-size: 28px;
     text-align: center;
-    cursor: default;    
+    cursor: default;
     margin: 10px;
     animation: text-appear 0.8s ease forwards;
 }
@@ -140,6 +140,24 @@ a{
 
     to {
         color: rgba(197, 197, 197, 0);
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .hamburger-menu {
+        z-index: 1000;
+        position: absolute;
+        width: 50%;
+        left: 25%;
+        top: 12%;
+        height: 50%;
+    }
+
+    .hamburger-menu__menu-options__option {
+
+        font-size: 24px;
     }
 
 }
