--- a/src/app/presentation/notepad/notepad.css
+++ b/src/app/presentation/notepad/notepad.css
@@ -105,6 +105,7 @@
     width: 96%;
     height: calc(100% - 85px);
     position: absolute;
+    padding: 10px;
     top: 50px;
     background: #fcfcfc;
     text-align: left;
@@ -154,4 +155,13 @@
     .notepad {
         display: block;
     }
+}
+
+@media (max-width: 500px) {
+
+    .notepad {
+        position: absolute;
+        
+    }
+
 }
