--- a/src/app/work-experience/experience/experience.css
+++ b/src/app/work-experience/experience/experience.css
@@ -1,9 +1,10 @@
 .experience {
-    background-color: rgba(30, 30, 30, 0.9);
-    margin: 30px 25px 30px 25px;
+    background-color: rgba(30, 30, 30, 0.9);    
     width: 40%;
-    display: inline-block;
-    
+    margin-left: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /* position: absolute; */
     padding: 10px;
     border-radius: 10px;
     text-align: center;
@@ -42,4 +43,22 @@
     font-size: 16px;
     padding: 4px;
     list-style-type: none;
+}
+
+@media (max-width: 740px) {
+
+    .experience {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+}
+
+@media (max-width: 499px) {
+
+    .experience {
+        width: 90%;
+        margin-left: 7%;
+    }
+
 }
