--- a/src/app/work-experience/work-experience.html
+++ b/src/app/work-experience/work-experience.html
@@ -1,26 +1,29 @@
 <section class="work-experience" id="work">
     <h2 class="work-experience__header">Work Experience</h2>
 
-    <app-experience title=".NET Full stack developer" companyName="Media Interactiva"
-    employmentType="Full-time" intervalDates="01/07/2022-07/01/2025" modality="Hybrid" companyLink="https://www.mediainteractiva.com/">
 
-        <ol>
-            <li>Improve and maintain .NET Web Forms legacy code.</li>
-            <li>Fix and create T-SQL scripts.</li>
-            <li>Develop new features on angular 16.</li>
-            <li>Improve and maintain AngularJS legacy code.</li>
-        </ol>
-    </app-experience>
+    
+        <app-experience title=".NET Full stack developer" companyName="Media Interactiva"
+        employmentType="Full-time" intervalDates="07/01/2022-01/07/2025" modality="Hybrid" companyLink="https://www.mediainteractiva.com/">
 
-
-        <app-experience title=".NET Full stack developer" companyName="Eikon Data" employmentType="Full-time"
-            [intervalDates]="'08/09/2025-'+present" modality="Hybrid" companyLink="https://www.eikondata.es/">
-        
             <ol>
-                <li>Add new features on razor/blazor projects.</li>
-                <li>Add new features and maintain and improve on VB6 applications.</li>
-                <li>Develop SQL stored procedures.</li>
-                <li>Work on c# console applications.</li>
+                <li>Improve and maintain .NET Web Forms legacy code.</li>
+                <li>Fix and create T-SQL scripts.</li>
+                <li>Develop new features on angular 16.</li>
+                <li>Improve and maintain AngularJS legacy code.</li>
             </ol>
         </app-experience>
+
+
+            <app-experience title=".NET Full stack developer" companyName="Eikon Data" employmentType="Full-time"
+                [intervalDates]="'09/08/2025-'+present" modality="Remote" companyLink="https://www.eikondata.es/">
+            
+                <ol>
+                    <li>Add new features on razor/blazor projects.</li>
+                    <li>Add new features and maintain and improve on VB6 applications.</li>
+                    <li>Develop SQL stored procedures.</li>
+                    <li>Work on c# console applications.</li>
+                </ol>
+            </app-experience>
+    
 </section>
