fixed img error

--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -10,22 +10,22 @@
 
             <div class="education-skills">
                 <div class="js">
-                    <img alt="linux-icon" src="/assets/icons/linux.svg" />
+                    <img alt="linux-icon" src="./assets/icons/linux.svg" />
                 </div>
                 <div  class="blue-shadow">
-                    <img alt="pwrshell-icon" src="/assets/icons/powershell.svg" />
+                    <img alt="pwrshell-icon" src="./assets/icons/powershell.svg" />
                 </div>
                 <div class="blue-shadow">
-                    <img alt="cisco" src="/assets/icons/cisco.svg" />
+                    <img alt="cisco" src="./assets/icons/cisco.svg" />
                 </div>
                 <div class="html5">
-                    <img alt="ubuntu" src="/assets/icons/ubuntu-original.svg" />
+                    <img alt="ubuntu" src="./assets/icons/ubuntu-original.svg" />
                 </div>
                 <div class="blue-shadow">
-                    <img alt="drupal" src="/assets/icons/drupal.svg" />
+                    <img alt="drupal" src="./assets/icons/drupal.svg" />
                 </div>
                 <div class="blue-shadow"> 
-                    <img alt="virtual box" src="/assets/icons/virtualbox.svg" />
+                    <img alt="virtual box" src="./assets/icons/virtualbox.svg" />
                 </div>
             </div>
             <span class="education-mark">Mark: 9.5</span>
@@ -37,22 +37,22 @@
 
             <div class="education-skills">
                 <div class="csharp">
-                    <img alt="csharp" src="/assets/icons/csharp.svg" />
+                    <img alt="csharp" src="./assets/icons/csharp.svg" />
                 </div>
                 <div class="java" >
-                    <img alt="java" src="/assets/icons/java.svg" />
+                    <img alt="java" src="./assets/icons/java.svg" />
                 </div>
                 <div class="blue-shadow">
-                    <img alt="c" src="/assets/icons/c.svg" />
+                    <img alt="c" src="./assets/icons/c.svg" />
                 </div>
                 <div class="python">
-                    <img alt="python" src="/assets/icons/python.svg" />
+                    <img alt="python" src="./assets/icons/python.svg" />
                 </div>
                 <div class="html5">
-                    <img alt="html5" src="/assets/icons/html5.svg" />
+                    <img alt="html5" src="./assets/icons/html5.svg" />
                 </div>
                 <div class="red-shadow">
-                    <img alt="sql-server" src="/assets/icons/sql-server.svg" />
+                    <img alt="sql-server" src="./assets/icons/sql-server.svg" />
                 </div>
             </div>
 
