fixed img error

--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -6,7 +6,7 @@
 
     <div class="education-list__wrapper">
         <div class="education" titleObtained="Technician in Microcomputer Systems and Networks" app-education
-            title="I.E.S Alixar" imagePath="/assets/centers/alixar.png">
+            title="I.E.S Alixar" imagePath="./assets/centers/alixar.png">
 
             <div class="education-skills">
                 <div class="js">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="education" titleObtained="Higher Technician in Multiplatform Application Development" app-education
-            title="I.E.S Majuelo" imagePath="/assets/centers/majuelo.png">
+            title="I.E.S Majuelo" imagePath="./assets/centers/majuelo.png">
 
 
             <div class="education-skills">
