--- a/src/app/education-list/education-list.css
+++ b/src/app/education-list/education-list.css
@@ -1,14 +1,14 @@
 .education-list {    
     width: 100%;    
-    height: 900px;
+    
     position: relative;
 }
 
 .education-list__wrapper {
-    width: 40%;
-    top: 20%;    
-    position: absolute;
-    left: 30%;
+    width: 100%;   
+    margin: 10px 0 10px 0;
+    text-align: center;
+    padding: 2px;    
 }
 
 .education-header {
