--- a/src/app/education-list/education-list.html
+++ b/src/app/education-list/education-list.html
@@ -3,11 +3,13 @@
 
     <h2 class="education-header">Education</h2>
 
-
     <div class="education-list__wrapper">
-        <div class="education" titleObtained="Technician in Microcomputer Systems and Networks" app-education
-            title="I.E.S Alixar" imagePath="./assets/centers/alixar.png">
 
+ 
+
+        <div class="education" titleObtained="Technician in Microcomputer Systems and Networks" app-education
+            title="I.E.S Alixar">
+            
             <div class="education-skills">
                 <div class="js">
                     <img alt="linux-icon" src="./assets/icons/linux.svg" />
@@ -28,11 +30,16 @@
                     <img alt="virtual box" src="./assets/icons/virtualbox.svg" />
                 </div>
             </div>
+            <h3 class="education-subtitle">Obtained at:</h3>
+            <iframe
+                align="left"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d792.574355677907!2d-6.0584832263879225!3d37.38279795868623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126cb0c66b619d%3A0x1ca80e208bb71b4d!2sInstituto%20de%20Educaci%C3%B3n%20Secundaria%20Alixar!5e0!3m2!1ses!2ses!4v1770672022297!5m2!1ses!2ses"
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <span class="education-mark">Mark: 9.5</span>
         </div>
 
         <div class="education" titleObtained="Higher Technician in Multiplatform Application Development" app-education
-            title="I.E.S Majuelo" imagePath="./assets/centers/majuelo.png">
+            title="I.E.S Majuelo">
 
 
             <div class="education-skills">
@@ -55,9 +62,15 @@
                     <img alt="sql-server" src="./assets/icons/sql-server.svg" />
                 </div>
             </div>
-
+            <h3 class="education-subtitle">Obtained at:</h3>
+            <iframe
+                 align="left"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.0303720283055!2d-6.070442799999999!3d37.389114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1213525f4743e5%3A0x21ceb607bb8bb7fa!2sIes%20Secondary%20Education%20Institute%20El%20Majuelo!5e0!3m2!1sen!2ses!4v1770673107624!5m2!1sen!2ses"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <span class="education-mark">Mark: 7.6</span>
         </div>
+
     </div>
 
 </section>
