--- a/src/app/education-list/education/education.css
+++ b/src/app/education-list/education/education.css
@@ -1,25 +1,11 @@
 .education {
-    width: 45%;
-    height: 900px;
-    background-color: rgba(30, 30, 30, 0.9);
+    width: 100%;        
     padding: 15px;
-    margin: auto;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    
-    display: inline-block;
-    z-index: 10;
-    height: 630px;
+    margin: auto;    
+    margin: 100px 0 100px 0;
+    top: 0;        
+    z-index: 10;    
     border-radius: 5px;
-}
-
-.education-img-wrapper {
-    border-radius: 20px;
-    width: 80%;
-    position: relative;
-    left: 10%;
-    height: 170px;
 }
 
 
@@ -87,21 +73,35 @@
 }
 
 .education-mark {
-    background-color: rgb(216, 216, 216);
+    text-align: left;
     padding: 3px;
     border-radius: 5px;
-    width: 50%;
-    color: #1D1D1D;
-    position: absolute;
-    left: 25%;
-    bottom: 20px;
-
+    width: 150px;
+    font-size: 17px;
+    font-style: italic;
+    text-decoration: underline;
+    color: #7e7e7e;            
+    margin-top: 20px;
     display: block;
+}
+
+iframe {
+    
+    width: 30%;
+    height: 200px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+
+.education-mark,.education-subtitle,.education-skills,iframe{
+    margin-left: 4%;
 }
 
 .education-title {
     padding: 10px;
     font-size: 28px;
+    text-align: left;
     color: rgb(223, 223, 223);
     word-spacing: 3px;
     letter-spacing: 3px;
@@ -110,33 +110,41 @@
 .education-subtitle {
     font-size: 22px;
     padding: 5px;
-    color: rgb(91, 91, 231);
+    text-align: left;
+    color: rgb(190, 190, 190);
     letter-spacing: 2px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    
 }
 
 
 
 .education-skills{
-    width: 96%;
-    position: relative;
-    left: 2%;
-    top: 3%;
+    
+    text-align: left;
+    width: 35%;        
 }
 
 .education-skills div{
-
+    height: 80px;
+    width: 80px;
     display: inline-block;
     background-color: #cac5c2;
     margin: 10px;
     border-radius: 5px;
 }
 
+.education-skills div:first-child {
+    margin-left: 0;
+}
+
+
 .education-skills  img{ 
     width: 50px;
     height: 50px;
     
-    margin: 10px 15px 10px 15px; 
+    margin: 15px; 
     
 }
 
