--- a/src/app/presentation/vs-code/top-menu/top-menu.css
+++ b/src/app/presentation/vs-code/top-menu/top-menu.css
@@ -10,6 +10,7 @@
     background-color: #1f1f1f;
     padding: 4px;
     width: 100%;
+    border-right: 1px solid #474747;
 }
 
 .vs-code-ui__navbar__menu {
