--- a/src/app/education-list/education/education.html
+++ b/src/app/education-list/education/education.html
@@ -1,4 +1,4 @@
 <h2 class="education-title">{{titleObtained()}}</h2>
 <h3 class="education-subtitle">Main Skills</h3>
 
-<ng-content select="p,div, span,iframe,h3"></ng-content>
+<ng-content select="p,div, span,iframe,h3,ul"></ng-content>
