--- a/src/app/education-list/education/education.css
+++ b/src/app/education-list/education/education.css
@@ -1,13 +1,39 @@
 .education {
     width: 90%;        
     padding: 25px;
+    min-height: 600px;
     margin: auto;    
     margin: 100px 0 100px 0;
     top: 0;        
     z-index: 10;        
+    position: relative;
     margin-left: 5%;    
-    border: 1px solid #4e4e4e;
-    background: #35353528;
+    border: 1px solid #2E343D;
+    background: #1b1f24a1;     
+}
+
+.education  hr {
+    border:1px solid #919191;
+    height: 250px;
+    position: absolute;
+    left:calc((100% - 2px) / 2 );
+    top: calc(13% + 125px );
+}
+
+.education-center-logo {
+    border-radius: 10px;                
+    width: 140px;
+    margin-left: 0;
+    height: 140px;    
+}
+
+
+.yellow{
+    color: #b4a655;
+}
+
+.green{
+    color: #88b455;
 }
 
 
@@ -26,6 +52,10 @@
     background-size: contain;
     background-position: -2px -3px ; 
     background-repeat: no-repeat;
+}
+
+.education-knowledge{
+    width: 100%;
 }
 
 .education-knowledge li{
@@ -57,6 +87,34 @@
 }
 
 
+.education-main-info{
+    position: absolute;
+    left: 5%;
+    top: 13%;
+    height: 500px;    
+    width: 45%;
+}
+
+.education-obtained-at{
+    position: absolute;
+    top: 13%;    
+    height: 500px;
+    right:5%;
+    width: 45%;
+}
+
+.education-obtained-at h3{    
+    text-align: center;
+}
+
+.education-obtained-at > span {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 0;
+    text-align: center;
+}
+
+
 
 @keyframes show {
 
@@ -76,25 +134,19 @@
     padding: 3px;
     border-radius: 5px;
     width: 150px;
-    font-size: 17px;
+    font-size: 22px;
     font-style: italic;
     text-decoration: underline;
-    color: #7e7e7e;            
+    color: #c9c9c9;            
     margin-top: 20px;
     display: block;
 }
 
-iframe {
-    
-    width: 30%;
-    height: 200px;
+iframe {        
+    width: 90%;    
+    height: 170px;
     margin-top: 20px;
-    margin-bottom: 20px;
-    
-}
-
-.education-mark,.education-subtitle,.education-skills,iframe,.education-knowledge{
-    margin-left: 4%;
+    margin-bottom: 20px;     
 }
 
 .education-title {
@@ -122,23 +174,18 @@ iframe {
 
 .education-skills{    
     text-align: left;
-    width: 50%;        
+    width: 80%;        
 }
 
 .education-skills div{
     height: 80px;
     width: 80px;
-    display: inline-flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
+    display: inline-flex;        
     gap: 10px;
     background-color: #cac5c2;
     margin: 15px 15px 15px 0;
     border-radius: 5px;
 }
-
-
-
 
 .education-skills  img{ 
     width: 50px;
@@ -146,34 +193,9 @@ iframe {
     margin: 15px;     
 }
 
-@media (max-width: 1300px) {
-
-    .education {
-        height: 700px;
-    }
-
-
-}
-
-
-@media (max-width: 1880px) {
-
-    .education {
-        height: 710px;
-    }
-
-
-}
-
-
 @media (max-width: 740px) {
 
-    .education {
-        width: 100%;
-        top: -200px;
 
-        position: relative;
-    }
 
     .education-img,
     .education-title-obtained {
@@ -204,16 +226,5 @@ iframe {
         left: 0;
         
     }
-
-}
-
-@media (max-width: 500px) {
-
-    .education {
-            
-            height: 740px;
-    
-            
-        }
 
 }
