--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ li:hover{
 }
 
 body{
-    background-color: rgb(20, 20, 20);    
+    background-color: #121417;    
     font-family: 'poppins', sans-serif;
     
     overflow-x: hidden;
