--- a/src/app/personal-projects/project/project.css
+++ b/src/app/personal-projects/project/project.css
@@ -1,12 +1,12 @@
 .project {
-    width: 40%;
-    left: 30%;
-    background-color: rgba(30, 30, 30, 0.9);
-    position: relative;
-    border-radius: 10px;
-    padding: 10px;
+    width: 90%;
+    left: 5%;    
+    background: #1b1f24a1;
+    position: relative;    
+    padding: 25px;
     display: flexbox;
-    margin: 35px 0 35px 0px;
+    border: 1px solid #2E343D;
+    margin: 100px 0 100px 0;
 }
 
 .project__title {
