--- a/src/app/tech-stack/tech-stack-group/tech-stack-group.css
+++ b/src/app/tech-stack/tech-stack-group/tech-stack-group.css
@@ -1,14 +1,11 @@
-.tech-stack__group {
-    margin: 50px 0 50px 0;
-    text-align: center;
-    background-color: rgba(30, 30, 30, 0.9);
-    width: 40%;
+.tech-stack__group {        
+    background: #1b1f24a1;
+    width: 90%;
     vertical-align: top;    
-    margin: 25px 20px 25px 20px;
-    display: inline-block;
-    left: 30%;
-    padding: 10px;
-    border-radius: 10px;    
+    margin: 50px 0 50px 0;
+    display: inline-block;    
+    padding: 25px;    
+    border: 1px solid #2E343D;
 }
 
 
